# fullstack-poker

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/src/api/: router.py
backend/src/db/: dataclass.py  db_setup.py
backend/src/exceptions/: game_exception.py
backend/src/models/: models.py
backend/src/repositories/: poker_repository.py
backend/src/services/: game_state_manager_service.py
backend/src/utils/: utils.py
backend/tests/: test_hand_routes.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/e2e/: start-game.spec.ts
frontend/src/app/: page.tsx
frontend/src/components/: ActionButtons.tsx  ActionLog.tsx  HandHistory.tsx  HandHistoryContainer.tsx  StackControl.tsx
frontend/src/utils/: apiClient.ts  endpointActionManager.ts  formatter.ts
frontend/test-results/: .last-run.json
frontend/test-results/e2e-start-game-Start-Game--9abed-s-are-dealt-and-log-appears/: error-context.md
